[workspace]
resolver = "2"
members = [
  "schema",
  "util",
  "checkpointer",
  "models",
  "tester",
  "fluence/src/services/event_joiner/modules/event_joiner"
]

  [workspace.dependencies]
  serde_json = "1.0.111"
  thiserror = "1.0.56"
  tracing = "0.1.37"
  tracing-appender = "0.2.3"
  url = "2.5.0"

    [workspace.dependencies.ceramic-http-client]
    git = "https://github.com/3box/ceramic-http-client-rs.git"
    branch = "fix/query-response"
    default-features = false

    [workspace.dependencies.serde]
    version = "1.0"
    features = [ "derive" ]

    [workspace.dependencies.tracing-subscriber]
    version = "0.3.17"
    features = [ "env-filter", "json" ]
