[workspace]
resolver = "2"
members = [
  "fluence/src/services/event_joiner/modules/event_joiner",
  "models",
  "schema",
  "calculator",
  "checkpointer",
  "tester"
]

  [workspace.dependencies]
  anyhow = "1.0.80"
  async-trait = "0.1.77"
  base64 = "0.21.7"
  curve25519-dalek = "=4.1.1"
  hmac = "0.12.1"
  jwt = "0.16.0"
  log = "0.4.21"
  serde_json = "1.0.111"
  sha2 = "0.10.8"
  thiserror = "1.0.56"
  tracing = "0.1.37"
  tracing-appender = "0.2.3"
  url = "2.5.0"

    [workspace.dependencies.clap]
    version = "=4.4.18"
    default-features = false
    features = [ "derive", "std" ]

    [workspace.dependencies.chrono]
    version = "0.4.34"
    features = [ "serde" ]

    [workspace.dependencies.ceramic-http-client]
    git = "https://github.com/3box/ceramic-http-client-rs.git"
    branch = "main"
    default-features = false

    [workspace.dependencies.serde]
    version = "1.0"
    features = [ "derive" ]

    [workspace.dependencies.tracing-subscriber]
    version = "0.3.17"
    features = [ "env-filter", "json" ]
