[package]
name = "calculator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
ceramic-http-client.workspace = true
cid = "0.10.1"
hmac.workspace = true
itertools = "0.12.1"
jwt.workspace = true
models = { path = "../models"}
schema = { path = "../schema"}
serde_json.workspace = true
sha2.workspace = true
tracing = "0.1.40"
