[package]
name = "checkpointer"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
futures-util = "0.3.30"
reqwest = "0.11.23"
reqwest-eventsource = "0.5.0"
schema = { path = "../schema"}
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { version = "1.35.1", default-features = false, features = ["macros", "sync"] }
tracing-actix-web = "0.7.6"
tracing.workspace = true
url.workspace = true
util = { path = "../util" }

[dev-dependencies]
#ceramic-http-client = { git = "https://github.com/3box/ceramic-http-client-rs.git", branch = "main", default-features = false, features = ["url"] }
#ceramic-http-client = { path = "/Users/dbrowning/code/3box/ceramic-http-client-rs", default-features = false }
ceramic-http-client = { git = "https://github.com/3box/ceramic-http-client-rs.git", branch = "feat/wasi" }
wiremock = "0.6.0-rc.2"
