[package]
name = "checkpointer"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
async-trait = "0.1.77"
futures-util = "0.3.30"
reqwest = "0.11.23"
reqwest-eventsource = "0.5.0"
schema = { path = "../schema"}
serde.workspace = true
serde_json.workspace = true
sqlx = { version = "0.7.3", features = ["runtime-tokio", "sqlite"] }
thiserror.workspace = true
tokio = { version = "1.35.1", default-features = false, features = ["macros", "sync"] }
tracing-actix-web = "0.7.6"
tracing.workspace = true
url.workspace = true
util = { path = "../util" }

[dev-dependencies]
ceramic-http-client = { workspace = true, features = ["remote"] }
curve25519-dalek = "=4.1.1"
tmpdir = "1.0.0"
wiremock = "0.6.0-rc.2"
