[package]
name = "models"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ceramic-http-client.workspace = true
chrono.workspace = true
serde.workspace = true
schemars = { version = "0.8.16", features = ["chrono"] }
