[package]
name = "tester"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
ceramic-http-client = { workspace = true, features = ["remote"] }
chrono.workspace = true
clap = { version = "=4.5.1", default-features = false, features = ["derive", "std"] }
curve25519-dalek = "=4.1.1"
models = { path = "../models" }
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1.36.0", default-features = false, features = ["macros", "rt-multi-thread"] }
tracing.workspace = true
url.workspace = true
util = { path = "../util" }
