[package]
name = "event_joiner"
version = "0.1.0"
edition = "2018"
publish = false

[[bin]]
name = "event_joiner"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.79"
ceramic-http-client.workspace = true
chrono = "0.4.34"
env_logger = "0.11.1"
httparse = "1.8.0"
log = "0.4.20"
marine-rs-sdk = "0.10.3"
models = { path = "../../../../../../models" }
schema = { path = "../../../../../../schema" }
serde.workspace = true
serde_json.workspace = true
url.workspace = true
wasm-rs-async-executor = "0.9.0"

[dev-dependencies]
marine-rs-sdk-test = "0.11.0"
