[package]
name = "event_joiner"
version = "0.1.0"
edition = "2018"
publish = false

[[bin]]
name = "event_joiner"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.79"
#ceramic-http-client = { git = "https://github.com/3box/ceramic-http-client-rs.git", branch = "main", default-features = false, features = ["url"] }
#ceramic-http-client = { path = "/Users/dbrowning/code/3box/ceramic-http-client-rs", default-features = false }
ceramic-http-client = { git = "https://github.com/3box/ceramic-http-client-rs.git", branch = "feat/wasi", default-features = false }
env_logger = "0.11.1"
httparse = "1.8.0"
log = "0.4.20"
marine-rs-sdk = "0.10.1"
schema = { path = "../../../../../../schema" }
serde.workspace = true
serde_json.workspace = true
url.workspace = true
wasm-rs-async-executor = "0.9.0"

[dev-dependencies]
marine-rs-sdk-test = "0.13.0"
